--- a/handeye_target_detection/launch/pose_estimation.yaml
+++ b/handeye_target_detection/launch/pose_estimation.yaml
@@ -1,8 +1,8 @@
 pose_estimation:
     ros__parameters:
         pattern: CHARUCO
-        image_topic: /rgb/image_raw
-        camera_info_topic: /rgb/camera_info
+        image_topic: /table/camera/color/image_raw
+        camera_info_topic: /table/camera/color/camera_info
         publish_image_topic: /image/detected
         width: 5
         height: 7
